--- a/index.html
+++ b/index.html
@@ -206,6 +206,21 @@
 
       </div>
 
+      <div class="row renglon4">
+
+        <div class="col s12 m6">
+          <h5>Equipo de <span class="blue-text text-darken-1">alta tecnología</span></h5>
+          <p class="flow-text">Contamos con lo último en materiales para garantizar el mejor servicio y al mejor
+            precio.</p>
+        </div>
+        <div class="col s12 m6">
+          <div>
+            <img src="img/michael-browning-40733-unsplash.jpg" class="circle responsive-img" alt="" />
+          </div>
+        </div>
+
+      </div>
+
     </div>
   </section>
   <!--Fin de Ventajas-->
@@ -214,7 +229,7 @@
   <section class="section-testimonial grey lighten-4">
 
     <div class="container">
-      <div class="row renglon4">
+      <div class="row">
         <div class="col s12">
 
           <div class="carousel carousel-slider center">
@@ -418,6 +433,7 @@
   <script src=" https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js">
     </script> <script>
     $("document").ready(function () {
+      //Inicializa sidennav
       $(".button-collapse").sideNav();
 
       //para hacer el efecto  sticky Header
@@ -434,19 +450,18 @@
         interval: 8000, // default - interval: 6000
         indicators: true
       });
-
-      //Paralaxer
-      //$(".parallaxer").parallaxer();
-
       //Carrusel
       $('.carousel.carousel-slider').carousel({
         fullWidth: true
-      }, setTimeout(autoplay, 4500));
+      });
 
       function autoplay() {
         $('.carousel').carousel('next');
         setTimeout(autoplay, 4500);
       }
+      autoplay();
+      //Paralaxer
+      //$(".parallaxer").parallaxer();
 
       //ScrollFire
       const options = [{
@@ -458,7 +473,7 @@
         },
         {
           selector: '.renglon2',
-          offset: 200,
+          offset: 300,
           callback: function (el) {
             Materialize.fadeInImage($(el));
           }
@@ -473,6 +488,13 @@
         {
           selector: '.renglon4',
           offset: 500,
+          callback: function (el) {
+            Materialize.fadeInImage($(el));
+          }
+        },
+        {
+          selector: '.renglon5',
+          offset: 900,
           callback: function (el) {
             Materialize.fadeInImage($(el));
           }
