Cambios en Footer
Links, redes sociales agregadas

--- a/pruebas.html
+++ b/pruebas.html
@@ -163,6 +163,20 @@
     </div>
 
     <div class="container">
+
+        <div class="card small">
+            <div class="card-image">
+                <img src="img/rainier-ridao-720108-unsplash.jpg" alt="" class="responsive-img" />
+                <span class="card-title">Peridoncia</span>
+            </div>
+            <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information.I am
+                    convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+                <a href="#">Reservar cita</a>
+            </div>
+        </div>
     </div>
     <!--  CDN jQuery -->
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
