--- a/pruebas.html
+++ b/pruebas.html
@@ -178,6 +178,26 @@
             </div>
         </div>
     </div>
+    <ul class="collapsible" data-collapsible="expandable">
+        <li>
+            <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
+            <div class="collapsible-body">
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+        </li>
+        <li>
+            <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+            <div class="collapsible-body">
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+        </li>
+        <li>
+            <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+            <div class="collapsible-body">
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+        </li>
+    </ul>
     <!--  CDN jQuery -->
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <!-- CDN Materialize JS  -->
