--- a/tratamientos.html
+++ b/tratamientos.html
@@ -402,7 +402,7 @@
     </footer>
     <!--FIN DEL FOOTER-->
     <!--                    ->  MODALES   <-               -->
-    <div id="servicio1" class="modal">
+    <div id="servicio1" class="modal modal-fixed-footer">
         <div class="modal-content">
             <h5 class="center">Hola, mi nombre es Julia y soy especialista en Ortodoncia </h5>
             <img src="img/rainier-ridao-720108-unsplash.jpg" alt="" class="responsive-img" />
@@ -415,7 +415,7 @@
         </div>
     </div>
 
-    <div id="servicio2" class="modal">
+    <div id="servicio2" class="modal modal-fixed-footer">
         <div class="modal-content">
             <h5 class="center">Hola, mi nombre es Pedro Ramos, especialista en Peridoncia </h5>
             <img src="img/Periodoncia.jpg" alt="" class="responsive-img" />
@@ -426,11 +426,10 @@
         </div>
     </div>
     <!--Modal Formulario-citas-->
-    <div id="formulario-cita" class="modal" style=" max-height: 100%;
-     ">
+    <div id="formulario-cita" class="modal" style=" max-height: 100%;">
         <div class="container">
             <div class="row">
-                <h5 class="center-align">Llene los <span class="blue-text text-darken-1">datos de la Cita</span></h5>
+                <h5 class="center-align">Llene los <span class="blue-text text-darken-1">Datos de la Cita</span></h5>
                 <form>
                     <div class="input-field col s12 l6">
                         <input type="text" id="nombre" class="validate">
