--- a/medicos.html
+++ b/medicos.html
@@ -75,7 +75,7 @@
                             </div>
 
                             <ul class="right hide-on-med-and-down fa-ul">
-                                <li><a href="medicos.html"><span class="fa-li"><i class="fas fa-sign-in-alt"></i></span>Login
+                                <li><a href="!#"><span class="fa-li"><i class="fas fa-sign-in-alt"></i></span>Login
                                         médico</a></li>
                                 <!--<li><a href="index.html"><i class="fas fa-sign-in-alt" style=" vertical-align: middle;"></i>Login
                     médico</a></li> -->
@@ -156,74 +156,108 @@
     <!--FIN DEL HEADER-->
     <!--INICIO CUERPO-->
     <main>
-        <!--Inicio Sucursales-->
-        <section class="section section-sucursales grey lighten-4">
+        <!--Inicio Medicos-->
+        <section class="section-medicos">
             <div class="container">
+                <h4>Administración de Citas</h4>
                 <div class="row">
                     <div class="col s12 m4">
 
-                        <ul class="collapsible" data-collapsible="accordion">
+                        <div class="card-panel blue lighten-5">
+                            <div class="row">
 
-                            <li onclick="cambiaRutaImagen('img/localizacion1.jpg')">
-                                <div class="collapsible-header">
-                                    <i class="material-icons red-text text-accent-4">place</i>
-                                    Las Margaritas
+                                <div class="col s12">
+                                    <img src="img/doctor-1.jpg" alt="" class="circle responsive-img" />
                                 </div>
-                                <div class="collapsible-body"><span>¡Visitanos ahora!</span>
-                                    <div class="divider"></div><em class="blue-text text-darken-2">
-                                        Av. Las margaritas 1207, Bugambilias.</em>
-                                </div>
-                            </li>
-                            <li onclick="cambiaRutaImagen('img/localizacion2.jpg')">
-                                <div class="collapsible-header"><i class="material-icons red-text text-accent-4">place</i>San
-                                    Manuel</div>
-                                <div class="collapsible-body"><span>¡Visitanos ahora!</span>
-                                    <div class="divider"></div><em class="blue-text text-darken-2">Circumbalación
-                                        907, Col. San Baltazar</em>
-                                </div>
-                            </li>
-                            <li onclick="cambiaRutaImagen('img/localizacion3.jpg')">
-                                <div class="collapsible-header"><i class="material-icons red-text text-accent-4">place</i>Centro</div>
-                                <div class="collapsible-body"><span>¡Visitanos ahora!</span>
-                                    <div class="divider"></div><em class="blue-text text-darken-2">Reforma
-                                        204, Centro.</em>
-                                </div>
-                            </li>
-                        </ul>
+                            </div>
+                            <div class="row">
+                                <h5 class="center">Doctor : <span class="blue-text">Pedro Rámos</span></h5>
+                            </div>
+                        </div>
 
                     </div>
-                    <div class="col s12 m8 hoverable">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15089.802351366356!2d-98.20489475582863!3d18.999856526418203!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sclinicas+odontologicas!5e0!3m2!1ses!2smx!4v1542971908587"
-                            width="100%" height="250px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <div class="col s12 m8">
+                        <h5 class="flow-text center">Seleccione cualquier fecha disponible para poder las Citas
+                            pendientes</h5>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col s12 m4 center-align">
-                        <img src="img/localizacion1.jpg" alt="" class="circle responsive-img change-imagen" style="height:200px" />
+                    <div class="col s12 m4">
+                        <div class="collection">
+                            <a href="#!" class="collection-item"><b>23-11-18 </b> José Ortiz : ortiz@gmail.com</a>
+                            <a href="#!" class="collection-item active"><b> 25-11-18</b>Jonathan Gonzáles :
+                                gonzales@gmail.com</a>
+                            <a href="#!" class="collection-item"><b>27-11-18 </b> Pedro Moreno: moreno10@gmail.com</a>
+                            <a href="#!" class="collection-item"><b>30-11-18 </b> Verónica Cástro: vero-nica@yahoo.com</a>
+                            <a href="#!" class="collection-item"><b>01-12-18 </b> Juan Gabriel: juanga-a@yahoo.com</a>
+                            <a href="#!" class="collection-item"><b>02-12-18 </b> Pedro López: p_lop@yahoo.com</a>
+                            <a href="#!" class="collection-item"><b>03-12-18 </b> Juan Antonio Ortega: ortega@yahoo.com</a>
+                            <a href="#!" class="collection-item"><b>06-12-18 </b> María Félix: m_fx@gmail.com</a>
+                            <a href="#!" class="collection-item"><b>07-12-18 </b> Donal Trump: mr_donalt@gmail.com</a>
+                            <a href="#!" class="collection-item"><b>08-12-18 </b> Lorena Buendía: lbdia@yahoo.com</a>
+                            <a href="#!" class="collection-item"><b>08-12-18 </b> Francisco Fonceca:
+                                fonseca-3@yahoo.com</a>
+                            <a href="#!" class="collection-item"><b>09-12-18 </b> Honorio López Días:
+                                lopez-diaz@yahoo.com</a>
+                        </div>
                     </div>
                     <div class="col s12 m8">
-                        <div>
-                            <div class="card-panel blue accent-3 hoverable">
-                                <p class="white-text" id="parrafo"><i class="far fa-question-circle fa-1x"></i><span>&nbspLocalice
-                                        la
-                                        clinica mas cercana lo atenderemos con gusto. Puede reservar con
-                                        anticipación para una atención eficiente.</span></p>
-                                <p class="white-text" id="parrafo"><i class="far fa-question-circle fa-1x"></i><span>&nbspPara
-                                        mayor
-                                        información escribanos o llamenos al numero <span class="lime-text text-lime-accent-1"
-                                            style="font-size: 24px;">2228-530-500</span></span></p>
-                                <p class="white-text" id="parrafo"><i class="far fa-question-circle fa-1x"></i><span>&nbspPuede
-                                        cancelar
-                                        cuando quiera (únicamente a los 2 días de anticipación).</span></p>
-                            </div>
+                        <div class=" lime accent-1">
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <div class="divider"></div>
+                            <a class="waves-effect waves-light btn blue white-text">Marcar como atendido</a>
+                            <a class="right-align waves-effect waves-light btn red white-text" style="margin-left: 27%;">Cancelar
+                                Cita</a>
                         </div>
                     </div>
                 </div>
+                <!--Botones-->
+                <div class="row">
+
+                </div>
+
+                <div class="row">
+
+                </div>
+
             </div>
         </section>
-
-        <!--Fin Sucursales-->
+        <!--Fin Medicos-->
     </main>
     <!--FIN DEL CUERPO-->
 
@@ -269,71 +303,6 @@
     <!--                    ->  INICIO MODALES   <-               -->
     <!--                    ->  fIN MODALES   <-               -->
 
-    <!--Modal Formulario-citas-->
-    <div id="formulario-cita" class="modal" style=" max-height: 100%;">
-        <div class="container">
-            <div class="row">
-                <h5 class="center-align">Llene los <span class="blue-text text-darken-1">Datos de la Cita</span></h5>
-                <form>
-                    <div class="input-field col s12 l6">
-                        <input type="text" id="nombre" class="validate">
-                        <label for="nombre">Nombre</label>
-                    </div>
-                    <div class="input-field col s12 l6">
-                        <input type="text" id="paterno" class="validate">
-                        <label for="paterno">Paterno</label>
-                    </div>
-                    <div class="input-field col s12 l6">
-                        <input type="text" id="paterno" class="validate">
-                        <label for="materno">Materno</label>
-                    </div>
-                    <div class="input-field col s12 l6">
-                        <input type="email" id="email" class="validate">
-                        <label for="email" data-error="Correo Inválido" data-success="Correcto">Email</label>
-                    </div>
-
-                    <div class="input-field col s12 l6">
-                        <input type="tel" pattern='\d{3}[\-]\d{3}[\-]\d{4}' title='Formato de telefono: (Formato: 123-456-7890)'
-                            id="telefono" class="validate">
-                        <label for="telefono">Telefono</label>
-                    </div>
-
-                    <div class="input-field col s12 l6">
-                        <select name="opciones-tratamientos" id="opciones-tratamientos">
-                            <option value="disabled selected">Selecciona un Tratamiento</option>
-                            <option value="1">Ortodoncia</option>
-                            <option value="2">Periodoncia</option>
-                            <option value="3">Endodoncia</option>
-                            <option value="4">Cirujía Dental</option>
-                            <option value="5">Estética Dental</option>
-                        </select>
-                        <label>Opciones de tratamientos</label>
-                    </div>
-
-                    <div class="input-field col 12 l6">
-                        <input type="text" class="datepicker" id="fecha">
-                        <label for="fecha">Fecha de la Cita</label>
-                    </div>
-
-                    <div class="input-field col 12 l6" id="hora">
-                        <input type="text" class="timepicker">
-                        <label for="hora">Hora de la Cita</label>
-                    </div>
-
-                    <div class="input-field col s12">
-                        <textarea id="mensaje" class="materialize-textarea"></textarea>
-                        <label for="mensaje">Escribenos un Mensaje</label>
-                    </div>
-
-                    <button class="btn waves-effect waves-light blue" type="submit" name="action">Enviar
-                        <i class="material-icons right">send</i>
-                    </button>
-                </form>
-
-            </div>
-        </div>
-    </div>
-
     <!--Fin Modal-->
 
     <!--<script src="js/jquery.min.js"></script>-->
@@ -343,7 +312,7 @@
   <script src=" https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js">
         </script> <script>
         $("document").ready(function () {
-            //Inicializa sidennav
+            //Inicializa sidenav
             $(".button-collapse").sideNav();
 
             //para hacer el efecto  sticky Header
@@ -391,12 +360,10 @@
             //Inicializacion del Collapsible
             $('.collapsible').collapsible();
 
+            $('.materialboxed').materialbox();
+
 
         });
-        //funcion para cambiar imagen
-        function cambiaRutaImagen(miUrl) {
-            $('.change-imagen').attr('src', miUrl);
-        }
     </script>
 
 </body>
