--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </div>
 
               <ul class="right hide-on-med-and-down fa-ul">
-                <li><a href="index.html"><span class="fa-li"><i class="fas fa-sign-in-alt"></i></span>Login
+                <li><a href="medicos.html"><span class="fa-li"><i class="fas fa-sign-in-alt"></i></span>Login
                     médico</a></li>
                 <!--<li><a href="index.html"><i class="fas fa-sign-in-alt" style=" vertical-align: middle;"></i>Login
                   médico</a></li> -->
