--- a/medicos.html
+++ b/medicos.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Poiret+One|Sacramento|Tauri" rel="stylesheet">
     <!-- Estilos propios -->
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/cuerpo.css">
+    <link rel="stylesheet" href="css/medicos.css">
     <link rel="stylesheet" href="css/footer.css">
 </head>
 
