--- a/precios.html
+++ b/precios.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="img/favicon.png" />
-    <title>Inicio</title>
+    <title>Tratamientos</title>
     <!--<link rel="stylesheet" href="css/materialize.min.css">-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css" />
     <link rel="stylesheet" type="text/css" href="css/jquery.parallaxer.min.css">
@@ -158,9 +158,8 @@
     <main>
         <!--Inicio Precios-->
         <section class="section-precios">
+            
             <div class="container">
-
-
                 <div class="row">
                     <div class="col s12">
                         <div class="center">
