Migrate data to php Files

--- a/tratamientos.html
+++ b/tratamientos.html
@@ -647,7 +647,7 @@
             /*Mismo tamaño entre las tarjetas*/
             $('.card-resize-height').matchHeight();
         });
-        //Operaciones con el dropdown
+        //Operaciones con el dropdown en Tratamientos
         function dropDownExpand(centinela, selectorIdMasMenos, selectorIdColapso){
 
             if (centinela === false) {
